Use fixed height for card-plot in horizontal episode cards to fix image alignment

--- a/src/main/resources/assets/style/main.scss
+++ b/src/main/resources/assets/style/main.scss
@@ -104,8 +104,13 @@ html {
 }
 
 .card-plot {
-    max-height: 200px;
     overflow-y: auto;
+    max-height: 150px;
+
+    @media (min-width: 768px) {
+        height: 150px;
+        max-height: inherit;
+    }
 }
 
 .show-card-progress, .season-card-progress {
